# deep-patient-cohorts

./: .coveragerc  .flake8  .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: build.yml
deep_patient_cohorts/: __init__.py  noisy_labeler.py
deep_patient_cohorts/classifiers/: __init__.py  age.py  sex.py
deep_patient_cohorts/common/: utils.py
deep_patient_cohorts/common/term_lists/: cardiac_drugs.txt  cardiac_procedures.txt  heart_disease.txt  vascular_sclerosis.txt
deep_patient_cohorts/utils/: common.py
notebooks/: getting_started.ipynb  noisy_label.ipynb  preprocess_mimic.ipynb
scripts/classifiers/: auto_keras.py  label_sex.py
scripts/classifiers/sex/: label_sex.py
scripts/icd_rollup/: icd9.py  rollup.py
tests/: conftest.py  test_deep_patient_cohorts.py  test_noisy_labeler.py
