[tool.poetry]
name = "deep_patient_cohorts"
version = "0.1.0"
description = "A deep learning NLP library for creating patient cohorts from unstructured clinical data."
authors = ["johngiorgi <johnmgiorgi@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/semantic-health/deep-patient-cohorts"
include = ["common/term_lists/*.txt"]

[tool.poetry.dependencies]
python = "^3.7.0"
typer = "^0.3.2"
pandas = "^1.1.1"
spacy = "^2.3.2"
scispacy = "^0.3.0"
flyingsquid = "^0.0.0-alpha.0"
pgmpy = "^0.1.12"
clinical-sectionizer = "^0.1.3"
jupyterlab = "^3.3.3"
en-ner-bc5cdr-md = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.3.0/en_ner_bc5cdr_md-0.3.0.tar.gz"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
hypothesis = "^5.23.7"
pytest = "^6.0.0"
pytest-cov = "^2.10.0"
coverage = "^5.2.1"
codecov = "^2.1.8"
mypy = "^0.790"

# This configuration is borrowed from: https://github.com/allenai/allennlp/blob/main/pyproject.toml
[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
